agregado contenido al archivo de kmeans

--- a/k-means.ipynb
+++ b/k-means.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#itero una lista de clusters para poder obtener la inercias de cada uno\n",
     "inercias =[]\n",
     "for k in clusters :\n",
     "    #con el fit aprende los centroides\n",
