agregamos la parte de analisis con los clusters definidos

--- a/k-means.ipynb
+++ b/k-means.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc=StandardScaler()#escalador "
+    "sc=StandardScaler()#escalador , estandarizador"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot para ver el metodo del codo\n",
+    "#plot para ver el metodo del codo y determinar el valor K\n",
     "fig,ax=plt.subplots(figsize=(10,10))\n",
     "sns.lineplot(data=eva,x=\"k\",y=\"inercia\" )"
    ]
@@ -136,7 +136,105 @@
    "id": "91718687",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "kmeans=KMeans(n_clusters=4,randomstate=0) # establece el numero de iteraciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f29e621",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kmeans.fit(x_norm)#aprende los centroides"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99fe4721",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kmeans.cluster_centers_#muestra los centroides encontrados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c229476",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kmeans.labels_#muestra los labels, las etiquetas de cada una de nuestras observaciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab47fd88",
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "415f593b",
+   "metadata": {},
+   "source": [
+    "vamos a agregar los labels a nuestro dataset original para poder observar a que grupo pertenecen cada una de las observaciones, para poder realizar un analisis del data set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cf33c29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"cluster\"]=kmeans.labels_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f9b32ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7758d06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.pairplot(df,hue=\"cluster\",palette=\"tab10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cf03a28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df[\"cluster\"]==0]#filtrar por clusters "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c0cfc94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.boxplot(x=\"cluster\",y=\"Murder\",data=df)#analisis por grupos"
+   ]
   }
  ],
  "metadata": {
