implementado la medidas de error y precision del notebook de linear regression

--- a/Linear regresion.ipynb
+++ b/Linear regresion.ipynb
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2d377797",
+   "id": "cb5b4cd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "986ae91c",
+   "id": "ada9f5b8",
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "9d7d8825",
+   "id": "10e31f89",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "bc77af53",
+   "id": "8c72991d",
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f8c41504",
+   "id": "59a96652",
    "metadata": {},
    "outputs": [
     {
@@ -785,13 +785,13 @@
     }
    ],
    "source": [
-    "r2_score(y_test, y_predict)"
+    "r2_score(y_test, y_predict)#la presicion del modelo"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1720944b",
+   "id": "eefd2020",
    "metadata": {},
    "outputs": [],
    "source": []
