terminado etapas de imputacion de datos faltantes, codificacion de variables categoricas y escalado de datos

--- a/curso de machine learning/8_Preparación del conjunto de datos.ipynb
+++ b/curso de machine learning/8_Preparación del conjunto de datos.ipynb
@@ -582,7 +582,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_set, val_set, test_set = train_val_test_split(df, stratify='protocol_type')#divimos nuestro conjunto de datos con stratificado , para que tenga un"
+    "train_set, val_set, test_set = train_val_test_split(df, stratify='protocol_type')#divimos nuestro conjunto de datos con stratificado , para que tengan una misma distribucion de los protocolos para preba , validacion y tet"
    ]
   },
   {
@@ -1954,7 +1954,7 @@
    ],
    "source": [
     "# Eliminamos las filas con valores nulos\n",
-    "X_train_copy.dropna(subset=[\"src_bytes\", \"dst_bytes\"], inplace=True)\n",
+    "X_train_copy.dropna(subset=[\"src_bytes\", \"dst_bytes\"], inplace=True)#agregamos inplace true para que no tengamos que definir denuevo el dataframe sino que se almacene en el actual\n",
     "X_train_copy"
    ]
   },
