se termino los modelos basados en distancia y densidad como lo son knn y LOF

--- a/anomaly_detection/Distance_Density_based_Algorithms.ipynb
+++ b/anomaly_detection/Distance_Density_based_Algorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "fb9f9572-6664-42e9-a160-f22dfeea0a8f",
    "metadata": {},
    "outputs": [],
@@ -240,11 +240,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2070bb9b-a941-4b21-870c-7c55592df232",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "499\n"
+     ]
+    }
+   ],
+   "source": [
+    "M = np.array([14, 17, 18, 20, 14, 12, 19, 13, 17, 20])\n",
+    "N = np.array([63, 74, 76, 72, 64, 75, 75, 61, 50, 53])\n",
+    "\n",
+    "# Subtract M from N and find the absolute value\n",
+    "abs_diffs = np.abs(N-M)\n",
+    "\n",
+    "# Calculate the final manhattan distance\n",
+    "manhattan_dist_MN = np.sum(abs_diffs)\n",
+    "\n",
+    "print(manhattan_dist_MN)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68676f60-0f04-4998-9b43-0e80d8883453",
+   "metadata": {},
+   "source": [
+    "# Tuning n_neighbors\r\n",
+    "n_neighbors is the most crucial parameter of KNN. When you are unsure about the number of outliers in the dataset (which happens often), you can't use the rule of thumb that suggests using 20 neighbors when contamination is below 10%.\r\n",
+    "\r\n",
+    "For such cases, you'll have to tune n_neighbors. Practice the process on the transformed version of the females dataset from the last exercise. It has been loaded as females_transformed. KNN estimator, evaluate_outlier_classifier and evaluate_regressor functions are also loaded.\r\n",
+    "\r\n",
+    "Here are the function bodies as reminders:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e8899bf8-2345-47e5-ac98-fac1da2f59ef",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def evaluate_outlier_classifier(model, data, threshold=.75):\n",
+    "    model.fit(data)\n",
+    "\n",
+    "    probs = model.predict_proba(data)\n",
+    "    inliers = data[probs[:, 1] <= threshold]\n",
+    "\n",
+    "    return inliers\n",
+    "\n",
+    "def evaluate_regressor(inliers):\n",
+    "    X, y = inliers.drop(\"weightkg\", axis=1), inliers[['weightkg']]\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=10, train_size=0.8)\n",
+    "\n",
+    "    lr = LinearRegression()\n",
+    "    lr.fit(X_train, y_train)\n",
+    "\n",
+    "    preds = lr.predict(X_test)\n",
+    "    rmse = mean_squared_error(y_test, preds, squared=False)\n",
+    "\n",
+    "    return round(rmse, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a3f4a47-9f65-458b-8cdc-976afd9e1e3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a list of values for n_neigbors\n",
+    "n_neighbors = [5, 10, 20]\n",
+    "scores = dict()\n",
+    "\n",
+    "for k in n_neighbors:\n",
+    "    # Instantiate KNN with the current k\n",
+    "    knn = KNN(n_neighbors=k, n_jobs=-1)\n",
+    "    \n",
+    "    # Find the inliers with the current KNN\n",
+    "    inliers = evaluate_outlier_classifier(knn, females_transformed, .50)\n",
+    "    \n",
+    "    # Calculate and store RMSE into scores\n",
+    "    scores[k] = evaluate_regressor(inliers)\n",
+    "    \n",
+    "print(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a7008db-e790-4f95-80b1-b26596865359",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_neighbors = [5, 20]\n",
+    "methods = ['largest', 'mean', 'median']\n",
+    "scores = dict()\n",
+    "\n",
+    "for k, m in product(n_neighbors,methods):\n",
+    "    # Create a KNN instance\n",
+    "    knn = KNN(n_neighbors=k, method=m, n_jobs=-1)\n",
+    "    \n",
+    "    # Find the inliers with the current KNN\n",
+    "    inliers = evaluate_outlier_classifier(knn,females_transformed,.55)\n",
+    "\n",
+    "    # Calculate and store RMSE into scores\n",
+    "    scores[(k, m)] = evaluate_regressor(inliers)\n",
+    "    \n",
+    "print(scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9398b25e-5345-41a4-949a-2452bad02e8c",
+   "metadata": {},
+   "source": [
+    "# LOF for the first time\n",
+    "LOF differs from KNN only in the internal algorithm and the lack of the method parameter. Practice detecting outliers with it using contamination filtering on the scaled version of females dataset from previous exercises.\n",
+    "\n",
+    "The dataset has been loaded as females_transformed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03f6f900-1f34-4423-81b0-9c21eaabc340",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import LOF from its relevant module\n",
+    "from pyod.models.lof import LOF\n",
+    "\n",
+    "# Instantiate LOF and fit to females_transformed\n",
+    "lof = LOF(contamination=0.003,n_neighbors=20,n_jobs=-1)\n",
+    "lof.fit(females_transformed)\n",
+    "\n",
+    "# Create a boolean index that checks for outliers\n",
+    "is_outlier = lof.labels_==1\n",
+    "\n",
+    "# Isolate the outliers\n",
+    "outliers = females_transformed[is_outlier]\n",
+    "\n",
+    "print(len(outliers))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb0ed407-e15e-495c-a673-e1d51cfdc97b",
+   "metadata": {},
+   "source": [
+    "# LOF with outlier probabilities\r\n",
+    "As always, double-check that the chosen contamination level is trustworthy by filtering the outliers with a probability threshold. The syntax is the same as with KNN.\r\n",
+    "\r\n",
+    "LOF estimator has already been imported, and the females_transformed dataset is also available"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c1389e2-43d9-4965-9667-3545ffcacb7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate an LOF with 20 neighbors and fit to the data\n",
+    "lof = LOF(n_neighbors=20)\n",
+    "lof.fit(females_transformed)\n",
+    "\n",
+    "# Calculate probabilities\n",
+    "probs = lof.predict_proba(females_transformed)\n",
+    "\n",
+    "# Create a boolean mask\n",
+    "is_outlier = probs[:,1]>0.5\n",
+    "\n",
+    "# Use the boolean mask to filter the outliers\n",
+    "outliers = females_transformed[is_outlier]\n",
+    "\n",
+    "print(len(outliers))"
+   ]
   }
  ],
  "metadata": {
