se agrego ejemplos con modelos ensembled

--- a/anomaly_detection/time_series_anomaly_detection.ipynb
+++ b/anomaly_detection/time_series_anomaly_detection.ipynb
@@ -1570,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "bd118e1f-34ae-45dd-bf50-5a30c7c83b27",
    "metadata": {},
    "outputs": [],
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "2acf3e1e-b0db-4582-be4b-25cd22f49367",
    "metadata": {},
    "outputs": [],
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "bd7876d7-3c62-4c66-b841-2cbd2e3c7bd7",
    "metadata": {},
    "outputs": [
@@ -1669,7 +1669,7 @@
        "4  2010-01-08   NaN  300.71"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "f2c13dea-d00e-41f9-b502-f8d6dfc18765",
    "metadata": {},
    "outputs": [
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "ac1e3897-fe1c-4261-aaed-d2473185da24",
    "metadata": {},
    "outputs": [
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "09afd88d-d285-40b1-b2e1-7b433782809c",
    "metadata": {},
    "outputs": [
@@ -1790,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "6dd5ec21-fefa-4557-bc34-6d749f9cbefe",
    "metadata": {},
    "outputs": [],
@@ -1816,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "594bc619-c4f7-4fa0-8abb-7dac20ccb079",
    "metadata": {},
    "outputs": [],
@@ -1826,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "c6276579-59bc-4337-8df9-1782d387d86c",
    "metadata": {},
    "outputs": [
@@ -1882,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "850e45e9-2f62-4462-89dc-0ca3dc187d2c",
    "metadata": {},
    "outputs": [
@@ -1907,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "f22779cc-3e11-4fd8-af61-6b7231413f5a",
    "metadata": {},
    "outputs": [
@@ -1929,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "2f37f7af-35ac-4650-840d-925052463f18",
    "metadata": {},
    "outputs": [
@@ -1952,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "0b4bb425-2c1c-4207-9464-1adcd2352094",
    "metadata": {},
    "outputs": [
@@ -1989,11 +1989,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a0ccce86-0a87-45e8-85e8-f4bb5dd451d8",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = seasonal_decompose(apple['GOOG'], period=365)\n",
+    "\n",
+    "residuals = results.resid\n",
+    "residuals = residuals.values.reshape(-1, 1)\n",
+    "\n",
+    "mad = MAD().fit(residuals)\n",
+    "\n",
+    "# Find the outliers\n",
+    "is_outlier = mad.labels_==1\n",
+    "outliers = apple[is_outlier]\n",
+    "\n",
+    "print(len(outliers))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34cfac79-a91f-4acf-b609-07e68a3467bd",
+   "metadata": {},
+   "source": [
+    "# Scaling parts of a dataset\n",
+    "In previous videos, you've used the QuantileTransformer on the full dataset. In this exercise, you will practice scaling only parts of a dataset. The reason for doing this is that the stocks datasets have numerically-encoded categorical features (day_of_week, day, month) that would have been incorrectly scaled if you used QuantileTransformer on the full dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "649b4f5f-31bf-45e0-95ce-01df99ffd1d6",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a list of columns\n",
+    "to_scale = [\"Open\",\"High\",\"Low\",\"Close\",\"Volume\"]\n",
+    "\n",
+    "# Initialize a QuantileTransformer\n",
+    "qt = QuantileTransformer(output_distribution=\"normal\")\n",
+    "\n",
+    "# Scale and store simultaneously\n",
+    "apple.loc[:,to_scale] = qt.fit_transform(apple[to_scale])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adc2212d-2a93-4668-bb16-d021daea8bb6",
+   "metadata": {},
+   "source": [
+    "# Manual outlier ensembles - creating the arrays\r\n",
+    "An ensemble is a collection of one or more machine learning models combined to make their predictions more robust. Creating outlier ensembles manually usually takes practice. Therefore, you will perform the operation in three steps.\r\n",
+    "\r\n",
+    "In this exercise, you will create a list of estimators and an empty array to store the probability scores.\r\n",
+    "\r\n",
+    "IForest is available to you, as well as NumPy as np."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b30bafe8-755d-4fce-a165-24ed512d667e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimators = [IForest(n_estimators=50), IForest(n_estimators=100)]\n",
+    "\n",
+    "shape = (len(apple), len(estimators))\n",
+    "probability_scores = np.empty(shape=shape)\n",
+    "\n",
+    "for index, est in enumerate(estimators):\n",
+    "    est.fit(apple)\n",
+    "    \n",
+    "    probs = est.predict_proba(apple)\n",
+    "    \n",
+    "    # Store into probability_scores\n",
+    "    probability_scores[:, index] = probs[:,1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "454762e9-f103-4c5f-9bad-7363cf285a03",
+   "metadata": {},
+   "source": [
+    "# Aggregating and thresholding the probabilities\r\n",
+    "There are many aggregation methods available when using ensembles. The most popular ones are the arithmetic mean and median.\r\n",
+    "\r\n",
+    "You can use the mean almost always, while you can reserve the median for cases when you have at least three or more classifiers in your estimators.\r\n",
+    "\r\n",
+    "Use the arithmetic averaging to filter the outliers from the apple dataset. probability_scores, and apple is available from the previous exercise. NumPy is also loaded."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d554bc0d-a85f-4ff1-b912-0f91c6f42e85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the mean across rows\n",
+    "mean_probs = np.mean(probability_scores,axis=1)\n",
+    "\n",
+    "# Create a boolean mask that uses a 75% threshold\n",
+    "is_outlier = mean_probs>0.75\n",
+    "\n",
+    "# Use the mask to filter outliers from apple\n",
+    "outliers = apple[is_outlier]\n",
+    "\n",
+    "print(len(outliers))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5215268-176b-4f08-b8e4-77a23222cfcb",
+   "metadata": {},
+   "source": [
+    "# Non-aggressive methods of dealing with outliers\r\n",
+    "Trimming a distribution is one of the easiest ways of dealing with an outlier without dropping it. If you know the natural range of values a distribution must take related to your business problem, you can use that knowledge to trim the distribution.\r\n",
+    "\r\n",
+    "Or, if you have some previous knowledge about which specific values are considered outliers based on domain knowledge or experience, you can also replace them with hard-coded values.\r\n",
+    "\r\n",
+    "This exercise is a chance to practice these two techniques on the apple stocks dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a71815b1-8026-4c8b-9474-e21910d79a37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "percentile_first = apple['Volume'].quantile(0.01)\n",
+    "percentile_99th = apple['Volume'].quantile(0.99)\n",
+    "\n",
+    "apple['Volume'] = apple['Volume'].clip(percentile_first, percentile_99th)\n",
+    "\n",
+    "# Replace 0s with 100s\n",
+    "apple.replace(0, 100, inplace=True)\n",
+    "\n",
+    "print(apple.head())"
+   ]
   }
  ],
  "metadata": {
