al normalizar las series podemos visualizar la variacion en porcentaje de los precios en comparacion con el primer precio

--- a/Time series/manipulating_time_series.ipynb
+++ b/Time series/manipulating_time_series.ipynb
@@ -747,6 +747,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d2bce1f6-f4f5-409d-ab60-40c6dff030a6",
+   "metadata": {},
+   "source": [
+    "**Normalizar Datos:**\n",
+    "El objetivo es comparar los precios de las acciones a lo largo del tiempo, por lo que es necesario normalizar los datos. Esto se hace tomando los precios del primer registro (first_prices) y usando estos valores para normalizar el resto de los datos. La normalización se realiza dividiendo cada valor por el primer precio y multiplicando por 100. Esto permite ver el cambio porcentual en relación con el primer precio para cada acción e índice."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "8d74b824-8f3f-4998-b35a-69c10b76d749",
