se trabajo en normalizacion de series de tiempo para ver su crecimiento en el tiempo

--- a/Time series/manipulating_time_series.ipynb
+++ b/Time series/manipulating_time_series.ipynb
@@ -757,7 +757,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "id": "f10a8b46-cab5-4b3a-b041-acb88e607be7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import stock prices and index here\n",
+    "stocks = pd.read_csv(\"./stock_data/nyse.csv\",parse_dates=[\"date\"],index_col=\"date\")\n",
+    "dow_jones = pd.read_csv(\"./stock_data/dow_jones.csv\",parse_dates=[\"date\"],index_col=\"date\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "38cc26b7-4f67-4015-9065-3d0fc550af9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>JNJ</th>\n",
+       "      <th>JPM</th>\n",
+       "      <th>XOM</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2010-01-04</th>\n",
+       "      <td>64.68</td>\n",
+       "      <td>42.85</td>\n",
+       "      <td>69.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-05</th>\n",
+       "      <td>63.93</td>\n",
+       "      <td>43.68</td>\n",
+       "      <td>69.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-06</th>\n",
+       "      <td>64.45</td>\n",
+       "      <td>43.92</td>\n",
+       "      <td>70.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-07</th>\n",
+       "      <td>63.99</td>\n",
+       "      <td>44.79</td>\n",
+       "      <td>69.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-08</th>\n",
+       "      <td>64.21</td>\n",
+       "      <td>44.68</td>\n",
+       "      <td>69.52</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              JNJ    JPM    XOM\n",
+       "date                           \n",
+       "2010-01-04  64.68  42.85  69.15\n",
+       "2010-01-05  63.93  43.68  69.42\n",
+       "2010-01-06  64.45  43.92  70.02\n",
+       "2010-01-07  63.99  44.79  69.80\n",
+       "2010-01-08  64.21  44.68  69.52"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stocks.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "be990058-2f21-4828-a0bc-8efbcaa123a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DJIA</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2010-01-04</th>\n",
+       "      <td>10583.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-05</th>\n",
+       "      <td>10572.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-06</th>\n",
+       "      <td>10573.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-07</th>\n",
+       "      <td>10606.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-08</th>\n",
+       "      <td>10618.19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                DJIA\n",
+       "date                \n",
+       "2010-01-04  10583.96\n",
+       "2010-01-05  10572.02\n",
+       "2010-01-06  10573.68\n",
+       "2010-01-07  10606.86\n",
+       "2010-01-08  10618.19"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dow_jones.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "8d74b824-8f3f-4998-b35a-69c10b76d749",
    "metadata": {},
    "outputs": [
@@ -791,10 +973,6 @@
     }
    ],
    "source": [
-    "# Import stock prices and index here\n",
-    "stocks = pd.read_csv(\"./stock_data/nyse.csv\",parse_dates=[\"date\"],index_col=\"date\")\n",
-    "dow_jones = pd.read_csv(\"./stock_data/dow_jones.csv\",parse_dates=[\"date\"],index_col=\"date\")\n",
-    "\n",
     "# Concatenate data and inspect result here\n",
     "data = pd.concat([stocks,dow_jones],axis=1)\n",
     "print(data.info())\n",
