--- a/Unsupervised learning/unsupervised_learning.ipynb
+++ b/Unsupervised learning/unsupervised_learning.ipynb
@@ -2760,17 +2760,180 @@
   {
    "cell_type": "markdown",
    "id": "83e82c5a-4873-48b1-8e19-da483f7f4073",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Discovering Interpretable Features"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e0301965-7b73-4cef-a73a-b176550c084d",
+   "metadata": {},
+   "source": [
+    "## Non negative matrix factorization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0497fdd7-4cd3-4df9-ad2d-02de7f16a7b5",
+   "metadata": {},
+   "source": [
+    "**NMF applied to Wikipedia articles**\n",
+    "\n",
+    "In the video, you saw NMF applied to transform a toy word-frequency array. Now it's your turn to apply NMF, this time using the tf-idf word-frequency array of Wikipedia articles, given as a csr matrix articles. Here, fit the model and transform the articles. In the next exercise, you'll explore the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "96420c90-d430-42d6-86c6-ca20f40e49c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.   0.   0.   0.   0.   0.44]\n",
+      " [0.   0.   0.   0.   0.   0.56]\n",
+      " [0.   0.   0.   0.   0.   0.4 ]\n",
+      " [0.   0.   0.   0.   0.   0.38]\n",
+      " [0.   0.   0.   0.   0.   0.48]\n",
+      " [0.01 0.01 0.01 0.03 0.   0.33]\n",
+      " [0.   0.   0.02 0.   0.01 0.36]\n",
+      " [0.   0.   0.   0.   0.   0.49]\n",
+      " [0.02 0.01 0.   0.02 0.03 0.48]\n",
+      " [0.01 0.03 0.03 0.07 0.02 0.34]\n",
+      " [0.   0.   0.53 0.   0.03 0.  ]\n",
+      " [0.   0.   0.35 0.   0.   0.  ]\n",
+      " [0.01 0.01 0.31 0.06 0.01 0.02]\n",
+      " [0.   0.01 0.34 0.01 0.   0.  ]\n",
+      " [0.   0.   0.43 0.   0.04 0.  ]\n",
+      " [0.   0.   0.48 0.   0.   0.  ]\n",
+      " [0.01 0.02 0.37 0.03 0.   0.01]\n",
+      " [0.   0.   0.48 0.   0.   0.  ]\n",
+      " [0.   0.01 0.55 0.   0.   0.  ]\n",
+      " [0.   0.   0.46 0.   0.   0.  ]\n",
+      " [0.   0.01 0.02 0.51 0.06 0.01]\n",
+      " [0.   0.   0.   0.51 0.   0.  ]\n",
+      " [0.   0.01 0.   0.42 0.   0.  ]\n",
+      " [0.   0.   0.   0.43 0.   0.  ]\n",
+      " [0.   0.   0.   0.49 0.   0.  ]\n",
+      " [0.1  0.09 0.   0.38 0.   0.01]\n",
+      " [0.   0.   0.   0.57 0.   0.01]\n",
+      " [0.01 0.01 0.   0.47 0.   0.01]\n",
+      " [0.   0.   0.   0.57 0.   0.  ]\n",
+      " [0.   0.   0.   0.52 0.01 0.01]\n",
+      " [0.   0.41 0.   0.   0.   0.  ]\n",
+      " [0.   0.6  0.   0.01 0.   0.  ]\n",
+      " [0.01 0.26 0.   0.02 0.01 0.  ]\n",
+      " [0.   0.64 0.   0.   0.   0.  ]\n",
+      " [0.   0.61 0.   0.   0.   0.  ]\n",
+      " [0.   0.34 0.   0.   0.   0.  ]\n",
+      " [0.01 0.31 0.02 0.   0.01 0.  ]\n",
+      " [0.01 0.21 0.01 0.05 0.02 0.01]\n",
+      " [0.01 0.46 0.   0.02 0.   0.  ]\n",
+      " [0.   0.64 0.   0.   0.   0.  ]\n",
+      " [0.   0.   0.   0.   0.47 0.  ]\n",
+      " [0.   0.   0.   0.   0.49 0.  ]\n",
+      " [0.   0.   0.   0.   0.38 0.01]\n",
+      " [0.   0.   0.   0.01 0.54 0.  ]\n",
+      " [0.   0.   0.01 0.   0.42 0.  ]\n",
+      " [0.   0.   0.   0.   0.51 0.  ]\n",
+      " [0.   0.   0.   0.   0.37 0.  ]\n",
+      " [0.   0.   0.04 0.   0.23 0.  ]\n",
+      " [0.01 0.   0.02 0.01 0.32 0.04]\n",
+      " [0.   0.   0.   0.   0.42 0.  ]\n",
+      " [0.3  0.   0.   0.   0.   0.  ]\n",
+      " [0.36 0.   0.   0.   0.   0.  ]\n",
+      " [0.39 0.03 0.   0.02 0.   0.02]\n",
+      " [0.37 0.   0.   0.04 0.   0.01]\n",
+      " [0.43 0.   0.   0.   0.   0.  ]\n",
+      " [0.45 0.   0.   0.   0.   0.  ]\n",
+      " [0.27 0.   0.   0.05 0.   0.02]\n",
+      " [0.44 0.   0.   0.   0.01 0.  ]\n",
+      " [0.29 0.01 0.01 0.01 0.19 0.01]\n",
+      " [0.37 0.01 0.   0.1  0.01 0.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import NMF\n",
+    "from sklearn.decomposition import NMF\n",
+    "from scipy.sparse import csr_matrix\n",
+    "import pandas as pd\n",
+    "#The reason for taking this transpose is that without it, there would be 13,000 columns (corresponding to the 13,000 words in the file), which is a lot of columns for a CSV to have.\n",
+    "\n",
+    "df = pd.read_csv('./dataset/Wikipedia articles/wikipedia-vectors.csv', index_col=0)\n",
+    "articles = csr_matrix(df.transpose())\n",
+    "titles = list(df.columns)\n",
+    "# Create an NMF instance: model\n",
+    "model = NMF(n_components=6)\n",
+    "\n",
+    "# Fit the model to articles\n",
+    "model.fit(articles)\n",
+    "\n",
+    "# Transform the articles: nmf_features\n",
+    "nmf_features = model.transform(articles)\n",
+    "\n",
+    "# Print the NMF features\n",
+    "print(nmf_features.round(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5cd315f-8288-49e0-aefb-030b44858a36",
+   "metadata": {},
+   "source": [
+    "**NMF features of the Wikipedia articles**\n",
+    "\n",
+    "Now you will explore the NMF features you created in the previous exercise. A solution to the previous exercise has been pre-loaded, so the array nmf_features is available. Also available is a list titles giving the title of each Wikipedia article.\n",
+    "\n",
+    "When investigating the features, notice that for both actors, the NMF feature 3 has by far the highest value. This means that both articles are reconstructed using mainly the 3rd NMF component. In the next video, you'll see why: NMF components represent topics (for instance, acting!)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "05268229-065e-4aad-b075-26bf8080470d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    0.003815\n",
+      "1    0.000000\n",
+      "2    0.000000\n",
+      "3    0.571894\n",
+      "4    0.000000\n",
+      "5    0.000000\n",
+      "Name: Anne Hathaway, dtype: float64\n",
+      "0    0.000000\n",
+      "1    0.005575\n",
+      "2    0.000000\n",
+      "3    0.419584\n",
+      "4    0.000000\n",
+      "5    0.000000\n",
+      "Name: Denzel Washington, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Create a pandas DataFrame: df\n",
+    "df = pd.DataFrame(nmf_features,index=titles)\n",
+    "\n",
+    "# Print the row for 'Anne Hathaway'\n",
+    "print(df.loc['Anne Hathaway'])\n",
+    "\n",
+    "# Print the row for 'Denzel Washington'\n",
+    "print(df.loc['Denzel Washington'])\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f96fdbcd-d40f-4840-8f3e-a640ad57bbd9",
+   "id": "5e3982f7-768f-4dd4-aa86-a59b5d222561",
    "metadata": {},
    "outputs": [],
    "source": []
