subi el proyecto acerca de factores para detecta fallas en el corazon

--- a/Time series/machine_learning_for_time_series.ipynb
+++ b/Time series/machine_learning_for_time_series.ipynb
@@ -671,7 +671,9 @@
   {
    "cell_type": "markdown",
    "id": "d658d9dc-c592-4a4a-9509-394ac1081f52",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Time Series as Inputs to a Model"
    ]
@@ -1371,6 +1373,14 @@
    "source": [
     "# Predicting Time Series Data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2a54cc7-c5dd-44df-b4c2-ac16fc2a8912",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2612,9 +2622,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ecec0718-839a-4dee-a945-722e0f6a76a8",
+   "metadata": {},
+   "source": [
+    "# Validating time series"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8410906-1861-430e-8e00-bfd534223a55",
+   "metadata": {},
+   "source": [
+    "## creating features from the past"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91b7c586-e721-45bd-917d-2af5167ae1db",
+   "metadata": {},
+   "source": [
+    "**Creating time-shifted features**\n",
+    "\n",
+    "In machine learning for time series, it's common to use information about previous time points to predict a subsequent time point.\n",
+    "\n",
+    "In this exercise, you'll \"shift\" your raw data and visualize the results. You'll use the percent change time series that you calculated in the previous chapter, this time with a very short window. A short window is important because, in a real-world scenario, you want to predict the day-to-day fluctuations of a time series, not its change over a longer window of time."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc23c975-3c4a-449c-a154-7161a0375f59",
+   "id": "0ab5aaf0-5caf-4385-86a6-69e0c8f147b7",
    "metadata": {},
    "outputs": [],
    "source": []
